--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AffichageDesScores"></activity>
+        <activity android:name=".ReglesDuJeu"></activity>
+        <activity android:name=".AffichageDesScores" />
         <activity android:name=".Jeu" />
         <activity android:name=".AjoutDeMot" />
         <activity android:name=".ChoixTheme" />
