--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Round"></activity>
-        <activity android:name=".ReglesDuJeu" />
-        <activity android:name=".AffichageDesScores" />
-        <activity android:name=".LancementJeu" />
-        <activity android:name=".AjoutDeMot" />
-        <activity android:name=".ParametrePartie" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Round"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".ReglesDuJeu"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".AffichageDesScores"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".LancementJeu"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".AjoutDeMot"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ParametrePartie"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
