--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         <activity android:name=".LancementJeu"
             android:screenOrientation="portrait"/>
         <activity android:name=".AjoutDeMot"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".ParametrePartie"
             android:screenOrientation="portrait"/>
         <activity android:name=".MainActivity"
